# claude-hippocampus

./: Cargo.toml  MIGRATION.md  README.md  marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/memory/knowledge/: operations.md
agents/: memory-manager.md
plugins/hippocampus/: README.md
plugins/hippocampus/.claude-plugin/: plugin.json
plugins/hippocampus/agents/: memory-manager.md
plugins/hippocampus/hooks/: session-end.md
plugins/hippocampus/skills/brain-cells/: SKILL.md
plugins/hippocampus/skills/brain-cells/knowledge/: retrieval.md
plugins/hippocampus/skills/brainstorming/: SKILL.md
plugins/hippocampus/skills/memory/: SKILL.md
skills/memory/: SKILL.md
skills/memory/knowledge/: extraction.md  retrieval.md
src/: cli.rs  config.rs  error.rs  git.rs  lib.rs  logging.rs  main.rs  session.rs
src/commands/: maintenance.rs  memory.rs  mod.rs  search.rs  stats.rs
src/db/: mod.rs  pool.rs  queries.rs
src/hooks/: debug.rs  mod.rs  post_tool_use.rs  session_end.rs  session_start.rs  stop.rs  user_prompt_submit.rs
src/models/: memory.rs  mod.rs  response.rs  session.rs  turn.rs
tests/: compatibility.rs
tests/integration/: cli_dispatch_tests.rs
