[package]
name = "claude-hippocampus"
version = "0.1.0"
edition = "2021"
authors = ["kaipochen"]
description = "PostgreSQL-backed memory system for Claude Code sessions"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# PostgreSQL
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json"
]}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Directory paths
dirs = "5.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
